--- a/config/grasp_score/mug.yaml
+++ b/config/grasp_score/mug.yaml
@@ -1,10 +1,24 @@
-grasp_1:
-  up_straight: 0.9
-  down_straight: 0.5
-  up_angle: 0.0
-  down_angle: 0.0
-grasp_2:
-  up_straight: 0.7
-  down_straight: 0.0
-  up_angle: 0.6
-  down_angle: 0.0
+TD0:
+  U_0: 0.0
+  U_90: 0.6
+  D_90: 0.0
+  U_180: 0.53334
+  U_45: 0.6
+TD90:
+  U_0: 0.53334
+  U_90: 0.0
+  D_90: 0.0
+  U_180: 0.6667
+  U_45: 0.6
+OI90:
+  U_0: 0.0
+  U_90: 0.9334
+  D_90: 0.8667
+  U_180: 0.0
+  U_45: 0.0
+TDH0:
+  U_0: 0.9334
+  U_90: 0.0
+  D_90: 0.0
+  U_180: 0.0
+  U_45: 0.0
